--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
           >
           </textarea>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <label for="lastqualification" class="form-label"
             >Last Qualification</label
           >
@@ -163,7 +163,7 @@
             required
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <label for="laptop" class="form-label">Do you have laptop?</label>
           <input
             class="form-control"
@@ -175,7 +175,7 @@
         </div>
         <button class="btn btn-primary mt-3" type="submit">Submit</button>
       </form>
-      <div class="row mt-4 justify-content-center gap-1" id="my-data"></div>
+      <div class="row mt-4 gy-3 gx-2" id="my-data"></div>
     </div>
 
     <script
